Version 17.9 - 24 December 2015

- include 60-evdev.rules instead of no more existing 60-keyboard.rules
- silent gtk+ warnings about swrast driver

Version 17.8 - 22 December 2015

- recognize new kernel-4.3 drivers

Version 17.7.1 - 17 December 2015

- include one more file for new X.org wrapper (mga#17348)

Version 17.7 - 17 December 2015

- adapt to new X.org wrapper (mga#17348)

Version 17.6 - 12 December 2015

- drakx-in-chroot:
  o fix running with xserver-1.18

Version 17.5 - 8 december 2015

- more substitution for task-plasma5
- use sddm instead of kdm

Version 17.4 - 6 December 2015

- use task-plasma5-minimal instead of task-kde4-minimal

Version 17.3 - 4 December 2015

- recognize new kernel-4.3 drivers

Version 17.1 - 27 August 2015

- recognize new kernel-4.1 drivers

Version 17.0 - 24 June 2015

- adapt to pango 1.37.x
- adapt to perl-5.22
- switch from evdev+synaptics to libinput driver

Version 16.105 - 15 June 2015

- really fix urpmi media when installing from USB (mga#5690)

Version 16.104 - 13 June 2015

- diskdrake:
  o prevent errors when telling kernel to reread partition table

Version 16.103 - 4 June 2015

- partitioning wizard:
  o only use current disk when auto partitioning, wiping disk,
    using free space (mga#16055)

Version 16.102 - 29 May 2015

- diskdrake:
  o ignore special 'Packard_Bell' and 'Push_Button_Reset' partitions (mga#15999)
  o run udevadm settle after actions that trigger device reload (mga#15999)

Version 16.101 - 25 May 2015

- do not die if network cannot be started for updates (mga#8819),
  just log the faillure and offer to either retry or abort
- do not offer to add a CD-ROM as supplement media (mga#13671)
- fix urpmi media when installing from USB (mga#5690)
- locale setting
  o fix reading back IM config (mga#15761)
- partitioning:
  o set pt_type according to fs_type before flag cases (mga#16029)

Version 16.100 - 20 May 2015

- add online media at installation end (mga#8819)

Version 16.99 - 20 May 2015
