@@ -1,3 +1,5 @@
+- use mutter instead of matchbox (fix black screen)
+
 Version 17.9 - 24 December 2015
 
 - include 60-evdev.rules instead of no more existing 60-keyboard.rules
